<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_burger"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="10dp"
    card_view:cardCornerRadius="10dp"
    tools:context=".Burger">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/image_item_photo"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            tools:src="@color/colorText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/tv_item_name"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/image_item_photo"
            android:layout_toRightOf="@id/image_item_photo"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/food_name" />

        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/layout_button"
            android:layout_below="@+id/tv_item_name"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/image_item_photo"
            android:layout_toRightOf="@id/image_item_photo"
            android:ellipsize="end"
            android:maxLines="2"
            tools:text="@string/food_detail" />

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@id/image_item_photo"
            android:layout_toRightOf="@id/image_item_photo"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded">

            <Button
                android:id="@+id/btn_selengkapnya"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_details"
                android:textColor="@color/white_grad"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>