<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:background="@drawable/gradient2"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/selectmenu"
            android:textColor="@android:color/white"
            android:textSize="34sp" />
    </RelativeLayout>

    <GridLayout
        android:rowCount="2"
        android:columnCount="2"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_weight="8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="25dp">



        <androidx.cardview.widget.CardView
            android:id="@+id/btn_move_beverages"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="70dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/beverages"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:text="@string/beverages"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>


            </LinearLayout>


        </androidx.cardview.widget.CardView>

<!--        row 1 & column 2-->
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_move_burger"
            android:clickable="true"

            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="70dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:focusable="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/burger"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:text="@string/burgers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>


            </LinearLayout>


        </androidx.cardview.widget.CardView>

<!--        row 2 & column 1-->
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_move_chiken"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="70dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:focusable="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/chicken"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:text="@string/chickens"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>


            </LinearLayout>


        </androidx.cardview.widget.CardView>

<!--        row 2 & column 2-->
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_move_sides"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="70dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/sidesfood"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:text="@string/sidesfoods"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>


            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </GridLayout>
</LinearLayout>